--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-loader": "^4.2.0",
     "postcss-px2rem": "^0.3.0",
     "prettier": "^1.18.2",
     "stylus": "^0.54.5",
